deploy/staging/deployment-slave.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: slave-ingress
  namespace: smi-slave-staging
  labels:
    app: smi-slave-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: smi-slave.dev.lappis.rocks
    http:
      paths:
      - backend:
          serviceName: slave-svc
          servicePort: 80
  tls:
  - hosts:
    - smi-slave.dev.lappis.rocks
    secretName: smi-slave-staging-letsencrypt-prod-crt
---
apiVersion: v1
kind: Service
metadata:
  name: slave-svc
  namespace: smi-slave-staging
  labels:
    app: smi-slave-staging
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: smi-slave-staging
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: slave-deployment
  namespace: smi-slave-staging
  labels:
    app: smi-slave-staging
spec:
  selector:
    matchLabels:
      app: smi-slave-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: smi-slave-staging
    spec:
      containers:
      - name: smi-slave-staging
        image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        command: ["sh", "scripts/start-prod.sh"]
        ports:
        - containerPort: 8000
          protocol: TCP
